k8s/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
  namespace: looply
  labels:
    app: client
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client
      tier: frontend
  template:
    metadata:
      labels:
        app: client
        tier: frontend
    spec:
      containers:
        - name: client
          image: us-central1-docker.pkg.dev/looply-478609/looply-frontend/looply-frontend:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "200m"
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          ports:
            - containerPort: 3000
              name: http
